syntax = "proto3";

package v1;

option go_package = "./v1";

import "google/protobuf/wrappers.proto";

service IpamService {
    rpc CreatePrefix(CreatePrefixRequest) returns (PrefixResponse);
    rpc DeletePrefix(DeletePrefixRequest) returns (PrefixResponse);
    rpc GetPrefix(GetPrefixRequest) returns (PrefixResponse);
    rpc AcquireChildPrefix(AcquireChildPrefixRequest) returns (PrefixResponse);
    rpc ReleaseChildPrefix(ReleaseChildPrefixRequest) returns (PrefixResponse);
    rpc AcquireIP(AcquireIPRequest) returns (AcquireIPResponse);
    rpc ReleaseIP(ReleaseIPRequest) returns (ReleaseIPResponse);
}

message Prefix {
    string cidr = 1;
    string namespace = 2;
	string parent_cidr = 3;
}
message PrefixResponse {
    Prefix prefix = 1;
}
message CreatePrefixRequest {
    string cidr = 1;
    string namespace = 2;
}
message DeletePrefixRequest {
    string cidr = 1;
    string namespace = 2;
}
message GetPrefixRequest {
    string cidr = 1;
    string namespace = 2;
}
message AcquireChildPrefixRequest {
    string cidr = 1;
    uint32 length = 2;
    string namespace = 3;
}
message ReleaseChildPrefixRequest {
    string cidr = 1;
    string namespace = 2;
}

message IP {
    string ip = 1;
    string namespace = 2;
    string parent_prefix = 3;
}
message AcquireIPResponse {
    IP ip = 1;
}
message ReleaseIPResponse {
    IP ip = 1;
}
message AcquireIPRequest {
    string prefix_cidr = 1;
    string namespace = 2;
    google.protobuf.StringValue ip = 3;
}
message ReleaseIPRequest {
    string prefix_cidr = 1;
    string namespace = 2;
    string ip = 3;
}
